Breaking Change: Rename 'pills' to 'light-tabs'

--- a/src/index.styl
+++ b/src/index.styl
@@ -1,6 +1,6 @@
 @import "nav";
 @import "nav-tabs";
-@import "nav-pills";
+@import "nav-light-tabs";
+@import "nav-panel-tabs";
 @import "nav-justified";
 @import "nav-stacked";
-@import "nav-tabs-justified";
