--- a/src/nav-light-tabs.styl
+++ b/src/nav-light-tabs.styl
@@ -1,7 +1,7 @@
-.nav-pills > li {
+.nav-light-tabs > li {
   float: left;
 }
-.nav-pills > li > a {
+.nav-light-tabs > li > a {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 13px;
   color: #777777;
@@ -9,21 +9,21 @@
   min-width: 80px;
   text-align: center;
 }
-.nav-pills > li > a:hover {
+.nav-light-tabs > li > a:hover {
   color: #777777;
   background-color: #fff;
   border-bottom: 2px solid #bbb;
   padding-bottom: 10px;
 }
-.nav-pills > li > a:focus {
+.nav-light-tabs > li > a:focus {
   background-color: #fff;
 }
-.nav-pills > li + li {
+.nav-light-tabs > li + li {
   margin-left: 1px;
 }
-.nav-pills > li.active > a,
-.nav-pills > li.active > a:hover,
-.nav-pills > li.active > a:focus {
+.nav-light-tabs > li.active > a,
+.nav-light-tabs > li.active > a:hover,
+.nav-light-tabs > li.active > a:focus {
     color: #222222;
     font-weight: bold;
     background-color: #ffffff;
@@ -31,26 +31,26 @@
     padding-bottom: 10px;
 }
 
-.nav-pills.nav-justified > li > a:hover {
+.nav-light-tabs.nav-justified > li > a:hover {
   color: #777777;
   background-color: #fff;
   border-bottom: 2px solid #bbb;
   padding-bottom: 10px;
 }
-.nav-pills.nav-justified > li.active > a,
-.nav-pills.nav-justified > li.active > a:hover,
-.nav-pills.nav-justified > li.active > a:focus {
+.nav-light-tabs.nav-justified > li.active > a,
+.nav-light-tabs.nav-justified > li.active > a:hover,
+.nav-light-tabs.nav-justified > li.active > a:focus {
     color: #222222;
     font-weight: bold;
     background-color: #ffffff;
     border-bottom: 2px solid #db3d44;
     padding-bottom: 10px;
 }
-.nav-pills.nav-justified > li > a {
+.nav-light-tabs.nav-justified > li > a {
     background-color: #ffffff;
     padding-bottom: 12px;
     border-bottom: 0;
 }
-.nav-pills.nav-justified > li + li > a {
+.nav-light-tabs.nav-justified > li + li > a {
     border-left: 0;
 }
