--- a/src/index.styl
+++ b/src/index.styl
@@ -1,4 +1,7 @@
+@import "caret";
 @import "nav";
+@import "navbar-nav";
+@import "navbar-default";
 @import "nav-tabs";
 @import "nav-light-tabs";
 @import "nav-panel-tabs";
