--- a/src/caret.styl
+++ b/src/caret.styl
@@ -16,7 +16,19 @@
 .nav.nav-light-tabs > li > a .caret,
 .nav.nav-panel-tabs > li > a .caret {
     border-top: 4px dashed #666;
+
+    &.dropup {
+        border-top: 0;
+        border-bottom: 4px dashed #666;
+        margin-bottom: 4px;
+    }
 }
 .nav.navbar-nav > li > a .caret {
     border-top: 4px dashed #fff;
+
+    &.dropup {
+        border-top: 0;
+        border-bottom: 4px dashed #fff;
+        margin-bottom: 4px;
+    }
 }
