--- a/src/nav-stacked.styl
+++ b/src/nav-stacked.styl
@@ -1,7 +1,61 @@
-.nav-stacked > li {
-  float: none;
+.nav-tabs.nav-stacked {
+    > li {
+        float: none;
+    }
+    > li > a {
+        background: inherit;
+        border: none;
+        padding: 9px 16px;
+    }
+    > li > a:hover {
+        background: inherit;
+        border-left: 2px solid #bbb;
+        padding-left: 14px;
+    }
+    > li > a:focus {
+        background: inherit;
+    }
+    > li + li {
+        margin-top: 1px;
+        margin-left: 0;
+    }
+    > li.active > a,
+    > li.active > a:hover,
+    > li.active > a:focus {
+        background-color: #f4f4f4;
+        border: none;
+        border-left: 2px solid #db3d44;
+        color: #222;
+        font-weight: bold;
+        padding: 9px 16px;
+        padding-left: 14px;
+    }
 }
-.nav-stacked > li + li {
-  margin-top: 2px;
-  margin-left: 0;
+
+.nav-light-tabs.nav-stacked {
+    > li {
+        float: none;
+    }
+    > li > a {
+        background: inherit;
+        border: none;
+        padding: 9px 16px;
+    }
+    > li > a:hover,
+    > li > a:focus {
+        background: #f4f4f4;
+    }
+    > li + li {
+        margin-top: 1px;
+        margin-left: 0;
+    }
+    > li.active > a,
+    > li.active > a:hover,
+    > li.active > a:focus {
+        background-color: inherit;
+        border: none;
+        color: #db3d44;
+        font-weight: bold;
+        padding: 9px 16px;
+    }
 }
