Add a border to the bottom for the tabs navigation tyle

--- a/src/nav-stacked.styl
+++ b/src/nav-stacked.styl
@@ -1,6 +1,8 @@
 .nav-tabs.nav-stacked {
+    border: none;
     > li {
         float: none;
+        margin: 0;
     }
     > li > a {
         background: inherit;
