--- a/src/nav-tabs.styl
+++ b/src/nav-tabs.styl
@@ -1,5 +1,9 @@
+.nav-tabs {
+  border-bottom: 1px solid #bbb;
+}
 .nav-tabs > li {
   float: left;
+  margin-bottom: -1px;
 }
 .nav-tabs > li + li {
   margin-left: -1px;
