--- a/src/nav-justified.styl
+++ b/src/nav-justified.styl
@@ -3,42 +3,60 @@
     > li {
         margin: 0;
     }
+    > li + li > a,
+    > li + li > a:focus,
+    > li + li > a:hover {
+        border-left: none;
+    }
+}
+
+.nav-panel-tabs.nav-justified {
+    > li + li > a {
+        &,
+        &:focus,
+        &:hover {
+            border-left: 1px solid #ddd;
+        }
+    }
 }
 
 .nav-justified {
-  width: 100%;
-}
-.nav-justified > li {
-  float: none;
-  display: table-cell;
-  width: 1%;
-}
-.nav-justified > li > a {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 13px;
-  color: #777777;
-  border-radius: 0;
-  background-color: #f4f4f4;
-  padding-top: 8px;
-  padding-bottom: 7px;
-  border-bottom: 1px solid #ddd;
-}
-.nav-justified > li > a:hover {
-  color: #777777;
-  background-color: #eeeeee;
-}
-.nav-justified > li + li > a {
-  border-left: 1px solid #ddd;
-}
-.nav-justified > li.active > a,
-.nav-justified > li.active > a:hover,
-.nav-justified > li.active > a:focus {
-  color: #222222;
-  font-weight: bold;
-  background-color: #ffffff;
-  cursor: default;
-}
-.nav-justified > .dropdown .dropdown-menu {
-  top: auto;
-  left: auto;
+    width: 100%;
+
+    > li {
+        float: none;
+        display: table-cell;
+        width: 1%;
+
+        > a {
+            font-size: 13px;
+            color: #777777;
+            border-radius: 0;
+            background-color: #f4f4f4;
+            padding-top: 8px;
+            padding-bottom: 7px;
+            border-bottom: 1px solid #ddd;
+
+            &:hover {
+                color: #777777;
+                background-color: #eeeeee;
+            }
+        }
+
+        &.active > a {
+            &,
+            &:focus,
+            &:hover {
+                color: #222;
+                font-weight: bold;
+                background-color: #ffffff;
+                cursor: default;
+            }
+        }
+    }
+
+    > .dropdown .dropdown-menu {
+        top: auto;
+        left: auto;
+    }
 }
