--- a/src/index.styl
+++ b/src/index.styl
@@ -3,7 +3,10 @@
 @import "navbar-nav";
 @import "navbar-default";
 @import "nav-tabs";
+@import "nav-tabs-justified";
+@import "nav-tabs-stacked";
 @import "nav-light-tabs";
+@import "nav-light-tabs-justified";
+@import "nav-light-tabs-stacked";
 @import "nav-panel-tabs";
-@import "nav-justified";
-@import "nav-stacked";
+@import "nav-panel-tabs-justified";
