--- a/src/nav-light-tabs.styl
+++ b/src/nav-light-tabs.styl
@@ -1,54 +1,36 @@
-.nav-light-tabs > li {
-  float: left;
-}
-.nav-light-tabs > li > a {
-  font-size: 13px;
-  color: #777777;
-  padding: 12px 16px;
-  min-width: 80px;
-}
-.nav-light-tabs > li > a:hover {
-  color: #777777;
-  background-color: #fff;
-  border-bottom: 2px solid #bbb;
-  padding-bottom: 10px;
-}
-.nav-light-tabs > li > a:focus {
-  background-color: #fff;
-}
-.nav-light-tabs > li + li {
-  margin-left: 1px;
-}
-.nav-light-tabs > li.active > a,
-.nav-light-tabs > li.active > a:hover,
-.nav-light-tabs > li.active > a:focus {
-    color: #222222;
-    font-weight: bold;
-    background-color: #ffffff;
-    border-bottom: 2px solid #db3d44;
-    padding-bottom: 10px;
-}
+.nav-light-tabs {
+    > li {
+        float: left;
 
-.nav-light-tabs.nav-justified > li > a:hover {
-  color: #777777;
-  background-color: #fff;
-  border-bottom: 2px solid #bbb;
-  padding-bottom: 10px;
-}
-.nav-light-tabs.nav-justified > li.active > a,
-.nav-light-tabs.nav-justified > li.active > a:hover,
-.nav-light-tabs.nav-justified > li.active > a:focus {
-    color: #222222;
-    font-weight: bold;
-    background-color: #ffffff;
-    border-bottom: 2px solid #db3d44;
-    padding-bottom: 10px;
-}
-.nav-light-tabs.nav-justified > li > a {
-    background-color: #ffffff;
-    padding-bottom: 12px;
-    border-bottom: 0;
-}
-.nav-light-tabs.nav-justified > li + li > a {
-    border-left: 0;
+        > a {
+            font-size: 13px;
+            color: #777777;
+            padding: 12px 16px;
+            min-width: 80px;
+
+            &:focus {
+                background-color: #fff;
+            }
+            &:hover {
+                color: #777777;
+                background-color: #fff;
+                border-bottom: 2px solid #bbb;
+                padding-bottom: 10px;
+            }
+        }
+
+        &.active > a,
+        &.active > a:focus,
+        &.active > a:hover {
+            color: #222222;
+            font-weight: bold;
+            background-color: #ffffff;
+            border-bottom: 2px solid #db3d44;
+            padding-bottom: 10px;
+        }
+    }
+
+    > li + li {
+        margin-left: 1px;
+    }
 }
