Fixed broken layout on first render

--- a/src/tab.styl
+++ b/src/tab.styl
@@ -1,7 +1,11 @@
 .tab-content > .tab-pane {
-    display: none;
+    display: block;
+    opacity: 0;
+    height: 0;
 }
 
 .tab-content > .active {
     display: block;
+    opacity: 1;
+    height: inherit;
 }
