--- a/src/tab.styl
+++ b/src/tab.styl
@@ -1,15 +1,19 @@
 .tab-content > .tab-pane {
-	display: block;
-    opacity: 0;
-    height: 0;
-    padding: 0;
-    margin: 0;
-    pointer-events: none;
-    overflow: hidden;
+	display: none;
 }
 
 .tab-content > .active {
     display: block;
     opacity: 1;
     height: inherit;
+}
+
+.tab-content > .inactive {
+	display: block
+    opacity: 0
+    height: 0
+    padding: 0
+    margin: 0
+    pointer-events: none
+    overflow: hidden
 }
